Mon Dec 12 15:56:19 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_opendds.mpb:
          Also use -Gsv

Mon Dec  5 15:45:27 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Subscriber.cpp:

          Fuzz.

        * docs/getting_started.odt:

          Complete description of messenger minimal.

Fri Dec  2 16:34:49 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model.editor/META-INF/MANIFEST.MF:

          Removed org.junit4 dependency from Require-Bundle list.

Thu Dec  1 19:49:19 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Messenger.idl:

          Reformatting.

        * docs/getting_started.odt:

          Describe IDL.

Thu Dec  1 19:28:32 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * DevGuideExamples/DCPS/Messenger.minimal/Boilerplate.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/DataReaderListenerImpl.h:
        * DevGuideExamples/DCPS/Messenger.minimal/DataReaderListenerImpl.cpp:
        * DevGuideExamples/DCPS/Messenger.minimal/Subscriber.cpp:

          Reformatting.

        * docs/getting_started.odt:

          Document describing minimal messenger.

Mon Nov 21 16:19:46 UTC 2011  Brian Johnson  <johnsonb@ociweb.com>

        * ChangeLog:
        * NEWS:
        * README:
        * docs/history/ChangeLog-3.0.1:

          Post release preparation for next release 3.1.

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: